unpackaged/main/default/objects/Contact/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Information</label>
    <type>TextArea</type>
</CustomField>