unpackaged/main/default/objects/Contact/fields/Canceled_Delayed_Flight__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Delayed_Flight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canceled/Delayed Flight</label>
    <type>Checkbox</type>
</CustomField>