unpackaged/main/default/objects/Contact/fields/City_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>City_of_Birth__c</fullName>
    <description>The contact&#39;s city of birth (if known)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>City of Birth</label>
    <length>50</length>
    <type>Text</type>
</CustomField>