unpackaged/main/default/objects/Contact/fields/COR_Approval__c.field-meta.xml
<CustomField>
    <fullName>COR_Approval__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>COR Approval</label>
    <type>Date</type>
</CustomField>