unpackaged/main/default/objects/Contact/fields/Country_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Birth__c</fullName>
    <description>The contact&#39;s country of birth (if known)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Country of Birth</label>
    <length>56</length>
    <type>Text</type>
</CustomField>