unpackaged/main/default/objects/Contact/fields/Covid_Positive__c.field-meta.xml
<CustomField>
    <fullName>Covid_Positive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Covid Positive</label>
    <type>Checkbox</type>
</CustomField>