unpackaged/main/default/objects/Contact/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <description>The traveler&#39;s current location</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>