unpackaged/main/default/objects/Contact/fields/Direct_or_Personalized_Threat__c.field-meta.xml
<CustomField>
    <fullName>Direct_or_Personalized_Threat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct or Personalized Threat</label>
    <type>Checkbox</type>
</CustomField>