unpackaged/main/default/objects/Contact/fields/Family_Group__c.field-meta.xml
<CustomField>
    <fullName>Family_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CARE Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>