unpackaged/main/default/objects/Contact/fields/Government_Requested_Delay__c.field-meta.xml
<CustomField>
    <fullName>Government_Requested_Delay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Government Requested Delay</label>
    <type>Checkbox</type>
</CustomField>