unpackaged/main/default/objects/Contact/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(&#39;/servlet/servlet.FileDownload?file= 0153S0000009SfY&#39;,&#39;Test Image&#39;, 100, 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>