unpackaged/main/default/objects/Contact/fields/Lodge_Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Lodge_Check_In_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lodge Check-In Date</label>
    <type>Date</type>
</CustomField>