unpackaged/main/default/objects/Contact/fields/Lodge_Name__c.field-meta.xml
<CustomField>
    <fullName>Lodge_Name__c</fullName>
    <label>Lodge Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kabul Suits Hotel</fullName>
            </value>
            <value>
                <fullName>City Walk Hotel</fullName>
            </value>
            <value>
                <fullName>Farza Creek Hotel</fullName>
            </value>
            <value>
                <fullName>Trivelles</fullName>
            </value>
            <value>
                <fullName>De Grand</fullName>
            </value>
            <value>
                <fullName>Grand Regency</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Safehouse</fullName>
            </value>
            <value>
                <fullName>Crown Plaza</fullName>
            </value>
            <value>
                <fullName>Hayat Palace</fullName>
            </value>
            <value>
                <fullName>BM Serviced Apartments</fullName>
            </value>
            <value>
                <fullName>Hotel Ornate</fullName>
            </value>
            <value>
                <fullName>Shelton Ambassador Hotel</fullName>
            </value>
            <value>
                <fullName>Envoy Continental</fullName>
            </value>
            <value>
                <fullName>GBC Serviced Apartments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>