unpackaged/main/default/objects/Contact/fields/Medical_Positive__c.field-meta.xml
<CustomField>
    <fullName>Medical_Positive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Positive</label>
    <type>Checkbox</type>
</CustomField>