unpackaged/main/default/objects/Contact/fields/Mission__c.field-meta.xml
<CustomField>
    <fullName>Mission__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mission Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>