unpackaged/main/default/objects/Contact/fields/National_ID__c.field-meta.xml
<CustomField>
    <fullName>National_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The contact&#39;s National ID #</description>
    <encryptionScheme>None</encryptionScheme>
    <label>National ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>