unpackaged/main/default/objects/Contact/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <description>The traveler&#39;s nationality as seen on their passport</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nationality</label>
    <length>50</length>
    <type>Text</type>
</CustomField>