unpackaged/main/default/objects/Contact/fields/Number_Of_Days_In_Lodging__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Days_In_Lodging__c</fullName>
    <formula>Lodge_Check_Out_Date__c - Lodge_Check_In_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Days In Lodging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>