unpackaged/main/default/objects/Contact/fields/Passport_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Expiration_Date__c</fullName>
    <description>The date that the contact&#39;s passport expires</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Expiration Date</label>
    <type>Date</type>
</CustomField>