unpackaged/main/default/objects/Contact/fields/Passport_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Issue_Date__c</fullName>
    <description>The date that the contact&#39;s passport was issued</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Issue Date</label>
    <type>Date</type>
</CustomField>