unpackaged/main/default/objects/Contact/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <description>The contact&#39;s passport #</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>