unpackaged/main/default/objects/Contact/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>The traveler&#39;s phone number(s)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>