unpackaged/main/default/objects/Contact/fields/Place_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Issue__c</fullName>
    <description>Where the traveler&#39;s passport was issued</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Place of Issue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>