unpackaged/main/default/objects/Contact/fields/Principal_Applicant_or_Family_Member__c.field-meta.xml
<CustomField>
    <fullName>Principal_Applicant_or_Family_Member__c</fullName>
    <label>Principal Applicant or Family Member</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal Applicant</fullName>
            </value>
            <value>
                <fullName>Family Member</fullName>
            </value>
            <value>
                <fullName>Derivative - Child</fullName>
            </value>
            <value>
                <fullName>Derivative - Spouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>