unpackaged/main/default/objects/Contact/fields/Referred_To__c.field-meta.xml
<CustomField>
    <fullName>Referred_To__c</fullName>
    <label>Referred To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>SIV</fullName>
            </value>
            <value>
                <fullName>SPBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>