unpackaged/main/default/objects/Contact/listViews/US_Army_view.listView-meta.xml
<ListView>
    <fullName>US_Army_view</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>US Army</value>
    </filters>
    <filters>
        <field>ACCOUNT.OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Bunch</value>
    </filters>
    <label>US Army View</label>
</ListView>